# loka-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: aid_real_demo.py  end_to_end_demo.py
infra/: Dockerfile.api  docker-compose.yml
libs/loka-schemas/: pyproject.toml
libs/loka-schemas/loka_schemas/: __init__.py  adapter.py  causal.py  data.py  evidence.py  mission.py  ports.py  query.py  wqt.py
scripts/: seed_demo.py
services/adapters/: pyproject.toml
services/adapters/loka_adapters/: __init__.py  memory.py  postgres.py
services/adapters/tests/: test_memory.py  test_postgres_integration.py
services/api/: pyproject.toml
services/api/loka_api/: __init__.py  app.py  world.py
services/api/tests/: test_api.py
services/causal/: pyproject.toml
services/causal/loka_causal/: __init__.py  admissibility.py  graph.py  neo4j_graph.py  slice.py
services/causal/tests/: test_admissibility.py  test_graph.py  test_neo4j_integration.py
services/compiler/: pyproject.toml
services/compiler/loka_compiler/: __init__.py  compiler.py
services/compiler/tests/: test_compiler.py
services/knowledge/: pyproject.toml
services/knowledge/loka_knowledge/: __init__.py  kb.py
services/knowledge/tests/: test_kb.py
services/ontology/: pyproject.toml
services/ontology/examples/: aid_allocation.yaml  toy_ontology.yaml
services/ontology/loka_ontology/: __init__.py  engine.py  infer.py  loader.py  model.py  souffle_checker.py
services/ontology/tests/: test_aid_example.py  test_engine.py  test_infer.py  test_souffle.py
services/state/: pyproject.toml
services/state/loka_state/: __init__.py  state.py
services/state/tests/: test_state.py
