[project]
name = "loka-api"
version = "0.0.1"
description = "Loka Platform HTTP API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "loka-schemas",
    "loka-ontology",
    "loka-state",
    "loka-causal",
    "loka-compiler",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.5", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loka_api*"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
