[project]
name = "loka-compiler"
version = "0.0.1"
description = "World Model Compiler → W(q, t)"
requires-python = ">=3.11"
# Runtime depends only on the contracts; concrete engines are injected by the caller
# (they implement the OntologyView / StateView / CausalSlicer ports).
dependencies = ["loka-schemas"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "loka-ontology",
    "loka-state",
    "loka-causal",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loka_compiler*"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
